objects/agf__ADM_Application_Approver__c.object
<CustomObject>
    <description>List of approvers for Releases or eReleases.</description>
    <fields>
        <fullName>agf__Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Application that this Approver supports.</description>
        <label>Application</label>
        <referenceTo>agf__ADM_Application__c</referenceTo>
        <relationshipLabel>Application Approvers</relationshipLabel>
        <relationshipName>Application_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Approval_Context__c</fullName>
        <description>Inform Only -- This Approver will receive notification when an approval request is made.
May Approve -- This Approver, or any other Approver with the same role, may approve the request.
Must Approve -- This Approver must approve all requests. If multiple Approvers have Must Approve context for a role, all of them will be required to approve the request.
Notify When Approved -- The Approver will be notified only when the request has been Approved.</description>
        <inlineHelpText>Inform Only -- will receive all notifications; 
May Approve -- may approve the request;
Must Approve -- must approve all requests; 
Notify When Approved -- will be notified only when the request has been Approved.
Primary -- Cloud
Secondary -- Cloud</inlineHelpText>
        <label>Approval Context</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>agf__Approver_Role__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Inform Only</fullName>
                </value>
                <value>
                    <fullName>May Approve</fullName>
                </value>
                <value>
                    <fullName>Must Approve</fullName>
                </value>
                <value>
                    <fullName>Notify When Approved</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Exception Primary</fullName>
                </value>
                <value>
                    <fullName>Exception Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Approval_Type__c</fullName>
        <description>Type of approvals in which this Approver participates.</description>
        <inlineHelpText>Select the type of approvals in which this Approver participates.</inlineHelpText>
        <label>Approval Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>eRelease</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Patch</fullName>
                </value>
                <value>
                    <fullName>Releases</fullName>
                </value>
                <value>
                    <fullName>eReleases</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Approver_Email__c</fullName>
        <description>Email of Approver (may be blank if email is same as User email).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Email of Approver. If Approver is specified, may be blank or must match Approver&apos;s User email. If Approver is not specified, this field may be set to a distribution list.</inlineHelpText>
        <label>Approver Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>agf__Approver_Role__c</fullName>
        <description>The role that this Approver performs.</description>
        <inlineHelpText>Approval Role. Note: &quot;Distribution List&quot; indicated this Approver is for notifications only. &quot;Functional&quot; requires that a Team be entered in the Functional Role field.</inlineHelpText>
        <label>Approver Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Buildmaster</fullName>
                </value>
                <value>
                    <fullName>Cloud Leader</fullName>
                </value>
                <value>
                    <fullName>Development Engineer</fullName>
                </value>
                <value>
                    <fullName>Development Manager</fullName>
                </value>
                <value>
                    <fullName>Distribution List</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Functional</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Quality Engineer</fullName>
                </value>
                <value>
                    <fullName>QE Manager</fullName>
                </value>
                <value>
                    <fullName>Release Coverage</fullName>
                </value>
                <value>
                    <fullName>Release Engineer</fullName>
                </value>
                <value>
                    <fullName>Release Manager</fullName>
                </value>
                <value>
                    <fullName>TechOps Engineer</fullName>
                </value>
                <value>
                    <fullName>TechOps Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Users record of the Approver.</description>
        <inlineHelpText>Approver. Must be blank if Approver Email is a distribution list.</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Application_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Cloud__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cloud to which this Approver is related.</description>
        <inlineHelpText>Cloud to which this Approver is related.</inlineHelpText>
        <label>Cloud</label>
        <referenceTo>agf__ADM_Cloud__c</referenceTo>
        <relationshipLabel>Application Approvers</relationshipLabel>
        <relationshipName>Application_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Executive_Role__c</fullName>
        <description>Title or role of Executive for &quot;Executive&quot; Approver Role.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the title or role of the Executive when &quot;Executive&quot; Approver Role is selected, otherwise leave blank.</inlineHelpText>
        <label>Executive Role</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Functional_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Required when Approval_Role is &quot;Functional&quot;, otherwise must be blank. Scrum Team for which this Approver is providing functional approval.</description>
        <inlineHelpText>Enter Scrum Team represented by this Approver when &quot;Functional&quot; Approval Role is selected, otherwise leave blank.</inlineHelpText>
        <label>Functional Team</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipLabel>Application Approvers</relationshipLabel>
        <relationshipName>Application_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Application Approver</label>
    <nameField>
        <displayFormat>AA-{00000}</displayFormat>
        <label>Application Approver Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Approvers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>agf__Approval_Conext_Must_Be_Specified</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( agf__Approval_Context__c, &quot;&quot; )</errorConditionFormula>
        <errorDisplayField>agf__Approval_Context__c</errorDisplayField>
        <errorMessage>The Approval Context must be specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Approval_Context_Must_Be_Specified</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( agf__Approval_Context__c, &quot;&quot; )</errorConditionFormula>
        <errorDisplayField>agf__Approval_Context__c</errorDisplayField>
        <errorMessage>The Approval Context must be specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Approver_Email_must_match_users_email</fullName>
        <active>true</active>
        <description>When a Approver user is specified, if an Email is also specified it much match the system&apos;s Email for that user.</description>
        <errorConditionFormula>NOT(ISBLANK(agf__Approver__c)) &amp;&amp; NOT(ISBLANK(agf__Approver_Email__c )) &amp;&amp; agf__Approver_Email__c &lt;&gt; agf__Approver__r.Email</errorConditionFormula>
        <errorDisplayField>agf__Approver_Email__c</errorDisplayField>
        <errorMessage>When an Approver is specified, Approver Email must be blank or match the user&apos;s system-defined email.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Approver_Role_Must_Be_Specified</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(agf__Approver_Role__c , &quot;&quot; )</errorConditionFormula>
        <errorDisplayField>agf__Approver_Role__c</errorDisplayField>
        <errorMessage>The Approver Role must be specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Approver_Type_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( agf__Approval_Type__c )</errorConditionFormula>
        <errorDisplayField>agf__Approval_Type__c</errorDisplayField>
        <errorMessage>Approval Type must be specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Approver_must_be_specified_for_Coverage</fullName>
        <active>true</active>
        <description>An Approver must be specified for Role &quot;Release Coverage&quot;.</description>
        <errorConditionFormula>ISBLANK(agf__Approver__c) &amp;&amp; ISPICKVAL(agf__Approver_Role__c, &quot;Release Coverage&quot;)</errorConditionFormula>
        <errorDisplayField>agf__Approver__c</errorDisplayField>
        <errorMessage>You must specify an Approver for Approver Role &quot;Release Coverage&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Approver_or_Email_must_be_specified</fullName>
        <active>true</active>
        <description>Either an Approver or an Email must be specified.</description>
        <errorConditionFormula>ISBLANK(agf__Approver__c)   &amp;&amp;  ISBLANK(agf__Approver_Email__c )</errorConditionFormula>
        <errorMessage>You must specify either an Approver or an Email.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Cloud_must_be_blank_unless_Cloud_Leader</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(ISPICKVAL(agf__Approver_Role__c, &quot;Cloud Leader&quot;)) &amp;&amp;  NOT(ISBLANK(agf__Cloud__c))</errorConditionFormula>
        <errorDisplayField>agf__Cloud__c</errorDisplayField>
        <errorMessage>Cloud must be blank unless the Approval Role is Cloud Leader</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Cloud_must_be_specified_for_Cloud_Leader</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(agf__Approver_Role__c, &quot;Cloud Leader&quot;) &amp;&amp; ISBLANK(agf__Cloud__c)</errorConditionFormula>
        <errorDisplayField>agf__Cloud__c</errorDisplayField>
        <errorMessage>Cloud must be specified when Approval Role is Cloud Leader</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__ExecRole_Specified_For_Executive_Approvr</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(agf__Approver_Role__c, &quot;Executive&quot;) &amp;&amp; ISBLANK(agf__Executive_Role__c)</errorConditionFormula>
        <errorDisplayField>agf__Executive_Role__c</errorDisplayField>
        <errorMessage>Executive Role must be specified when &quot;Executive&quot; Approver Role is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Exec_Role_Blank_unless_Executive_Role</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(agf__Executive_Role__c)) &amp;&amp; NOT(ISPICKVAL(agf__Approver_Role__c, &quot;Executive&quot;))</errorConditionFormula>
        <errorDisplayField>agf__Executive_Role__c</errorDisplayField>
        <errorMessage>Approver Role must be &quot;Executive&quot; when Executive Role is specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Team_Blank_unless_Functional_ApproveRole</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(ISBLANK(agf__Functional_Team__c)) &amp;&amp; NOT(ISPICKVAL(agf__Approver_Role__c, &quot;Functional&quot;))</errorConditionFormula>
        <errorDisplayField>agf__Approver_Role__c</errorDisplayField>
        <errorMessage>Approver Role must be &quot;Functional&quot; when Functional Team is specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Team_Specified_Functional_Approver_Role</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(agf__Approver_Role__c, &quot;Functional&quot;) &amp;&amp; ISBLANK(agf__Functional_Team__c)</errorConditionFormula>
        <errorDisplayField>agf__Functional_Team__c</errorDisplayField>
        <errorMessage>Functional Team must be specified when &quot;Functional&quot; Approver Role is selected.</errorMessage>
    </validationRules>
</CustomObject>